--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.12.0",
     "react-loading-dot": "^1.0.6",
     "react-router-dom": "^6.20.0",
+    "react-textarea-autosize": "^8.5.3",
     "terser": "^5.24.0"
   },
   "devDependencies": {
