--- a/package.json
+++ b/package.json
@@ -14,24 +14,29 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
     "appwrite": "^13.0.1",
+    "axios": "^1.6.2",
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-loading-dot": "^1.0.6",
     "react-router-dom": "^6.20.0",
     "react-textarea-autosize": "^8.5.3",
-    "terser": "^5.24.0"
+    "terser": "^5.24.0",
+    "vite-plugin-env": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react": "^4.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "react-refresh": "^0.14.0",
     "vite": "^5.0.0"
   }
 }
