--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
     "appwrite": "^13.0.1",
+    "axios": "^1.6.2",
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
+    "react-chat-elements": "^12.0.11",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
